# git-lfs-fcgi

./: CMakeLists.txt  LICENSE  README.md  fcgi_main.c  git_lfs_server.c  git_lfs_server.h  options.h  premake5.lua  socket_io.h  standalone_main.c
compat/: base64.c  base64.h  queue.h  string.h
conf/: example-repo.conf  git-lfs-fcgi.conf  git-lfs-fcgi.service  git-lfs-server.conf  git-lfs-server.service
debian/: README  README.Debian  README.source  changelog  control  copyright  git-lfs-fcgi.install  git-lfs-server.cron.d.ex  git-lfs-server.default.ex  git-lfs-server.doc-base.EX  git-lfs-server.install  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  manpages  menu.ex  postinst  postinst.ex  postrm.ex  preinst.ex  prerm  prerm.ex  rules  watch.ex
man/: git-lfs-fcgi.8  git-lfs-fcgi.conf.5  git-lfs-fcgi.conf.txt  git-lfs-fcgi.txt  git-lfs-server.8  git-lfs-server.conf.5  git-lfs-server.conf.html  git-lfs-server.conf.txt  git-lfs-server.html  git-lfs-server.txt
os/: droproot.h  filesystem.h  io.h  mutex.h  process.h  sandbox.h  signal.h  socket.h  threads.h
os/linux/: sandbox.c
os/macosx/: sandbox.c
os/openbsd/: sandbox.c
os/unix/: droproot.c  filesystem.c  io.c  mutex.c  process.c  signal.c  socket.c  threads.c
src/: config.c  config.h  configuration.c  configuration.h  crypt_blowfish.c  crypt_blowfish.h  fcgi_main.c  git_lfs_server.c  git_lfs_server.h  htpasswd.c  htpasswd.h  httpd.c  httpd.h  main.c  md32_common.h  mkdir_recusive.c  mkdir_recusive.h  oid_utils.c  oid_utils.h  options.h  parse.y  repo_manager.c  repo_manager.h  scan.l  sha256.c  sha256.h  socket_utils.c  socket_utils.h  standalone_main.c
